v1.0.4.01 - Updated openapi-wooapp.yaml to include new endpoints for user address management. - Implemented user address management endpoints in UserAuthEndpoints.php. - Added a new constant for user address storage in Constants.php.
